Fixed: TextInput: Wrong width in sidebar

--- a/src/styles/themes/proton/inputs.styl
+++ b/src/styles/themes/proton/inputs.styl
@@ -469,12 +469,14 @@
   &[data-width="50"]
     width: 50%
 
-.Sidebar .TextField .TextInput
+.Sidebar .TextInput
 .TextField.-compact .TextInput
   margin: 0
   > textarea
     box-sizing: content-box
     max-height: 200px
+  input
+    width: 100%
 
 // ---
 // -- Input
